<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    >

    
    
    
     <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
      
        android:text="@string/cui_app_title"
        android:textColor="#999999"
        android:textSize="20sp"
     android:layout_marginTop="60dp"
        android:gravity="center_vertical"
        android:drawablePadding="5dp"
    />
<RelativeLayout 
    android:id="@+id/rl_empty"
    android:layout_width="match_parent"
    android:layout_marginBottom="60dp"
    android:layout_height="match_parent">
    
   
    
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ff999999"
        android:textSize="14dp"
        android:text="@string/cui_a_msg_empty_tips"
        android:drawableTop="@drawable/cui_state_blank"
        android:layout_centerInParent="true"
        android:drawablePadding="20dp"
        android:paddingBottom="100dp"/>
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:text="@string/intsig_copyright"
        android:textColor="#ffacacac"
        android:textSize="12dp"
        android:drawableLeft="@drawable/cui_ic_logo"
        android:gravity="center_vertical"
        android:drawablePadding="5dp"
        android:layout_marginBottom="17dp"/>
</RelativeLayout>

    
      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
       android:layout_alignParentBottom="true"
        android:background="#ff18b8f5"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/btn_use_camare_module"
            style="@style/cui_buttonStyle"
            android:drawableTop="@drawable/ic_camera"
            android:text="@string/cui_dl_tips_take_photo" />

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="#68ffffff" />

        <TextView
            android:id="@+id/btn_not_use_camare_module"
            style="@style/cui_buttonStyle"
            android:drawableTop="@drawable/ic_camera"
            android:text="@string/cui_dl_tips_pick_photo" />
    </LinearLayout>
</RelativeLayout>